@@ -94,7 +94,6 @@
         <setting id="kodion.support.alternative_player" type="bool" label="30036" default="false"/>
         <setting id="kodion.alternative_player.web.urls" type="bool" label="30704" default="false" subsetting="true" enable="eq(-1,true)"/>
         <setting id="youtube.view.description.show_channel_name" type="bool" label="30541" default="true"/>
-        <setting id="youtube.search.remote.friendly" type="bool" label="30729" default="false"/>
         <setting type="sep"/>
         <setting id="kodion.playback.history" type="bool" label="30675" default="false"/>
         <setting type="sep"/>
