@@ -1,4 +1,5 @@
 6.8.4
+[fix] searching, no longer require remote safe search
 [fix] notifications for some languages
 
 6.8.3
